Adjusted button layout to make sure it doesn't overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,6 +198,7 @@ select {
         align-items: center;
         justify-content: center;
         gap: 5px;
+        height: auto;
     }
 
     /* Making only the difficulty and start button smaller */
